snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.jar.sha512
b2c4d0ae5a282a050d39af6343b894330be2e54b94dd2bbc5912dedfc5a581703d0b5d7be4c6086fc3e92eebe4f9f08e22a91cb741668fc13099d11477b3070a